--- a/TrouvTonResto/Rapport/sections/analyseBesoin.tex
+++ b/TrouvTonResto/Rapport/sections/analyseBesoin.tex
@@ -38,8 +38,8 @@ l'autre en fonction de l'implication et des réponses de l'interviewé.
 \begin{itemize}
 \item En quelle année d'étude es-tu ? Es-tu insalien ?
 \item Où manges-tu les midis ?
-\item Pourquoi ne manges-tu pas ailleurs ? (Il fallait essayer de d'amener les points
-suivant : le temps d'attente, le prix, la facilité de manger avec des amis,
+\item Pourquoi ne manges-tu pas ailleurs ? (Il fallait essayer d'aborder les points
+suivants : le temps d'attente, le prix, la facilité de manger avec des amis,
 la proximité, la qualité, la variété des menus et le menu du jour)
 \item Où manges-tu si tu as moins d'une heure pour manger ?
 \item Si tu avais su qu'un autre restaurant avait un temps d'attente inférieur, 
@@ -69,12 +69,13 @@ un doctorant et deux professeurs du département \textsc{tc}.
 
 \subsection{Résultats obtenus}
 Dans la quasi totalité des cas, à l'exception des gens moins pressés 
-de part leurs horaires plus flexibles, le facteur temps est très important.
-Sans cesse la réponse est : j'irais au plus proche, au plus rapide. Cela
+du fait de leurs horaires plus flexibles que ceux de l'usager moyen, le
+facteur temps est très important.  Sans cesse la réponse est : j'irais
+au plus proche, au plus rapide. Cela
 n'est pas choquant car en quelques minutes la file
 d'attente peut passer de quelques minutes d'attente à plusieurs
 dizaines de minutes. Pour beaucoup d'étudiant, l'argument expliquant cette
-importante est que le temps entre midi et quatorze heures permet de faire de
+importance est que le temps entre midi et quatorze heures permet de faire de
 nombreuses choses comme des activités associatives, travailler sur un devoir à rendre,
 travailler en projet, faire une réunion de travail ou bien une sieste. Les raisons ne manquent pas 
 pour expliquer que tout le monde veuille manger rapidement. 
