--- a/TrouvTonResto/Rapport/sections/maquette.tex
+++ b/TrouvTonResto/Rapport/sections/maquette.tex
@@ -1,5 +1,35 @@
 Nous avons commencé par tester des idées d'IHM à l'aide de post-its
 représentant les enchaînements d'écrans. Cette façon de faire nous a
 permis d'éviter certaines organisations d'écran auxquelles nous avons
-pensé qui se sont révélées peu ergonomiques lors des tests. Les
-maquettes réalisées sont présentées ci-après.
+pensé qui se sont révélées peu ergonomiques lors des tests. Un exemple
+d'agencement que cette expérimentation nous a fait choisir est celle du
+bouton "Itinéraire" qui a été fixé au lieu de se retrouver en bas d'un
+panneau déroulant. En effet, nous avions simulé le scroll avec le bout
+de post-it présenté en figure \ref{bout} et en ayant le bouton fixé
+(figure \ref{fixe}). Il nous a finalement paru plus judicieux de laisser ce
+bouton accessible, même si le menu du restaurant venait à occuper de la
+place. Les maquettes réalisées sont présentées ci-après\footnote{Les
+scan des post-it n'ayant pas donné de grands résultats (du fait sûrement
+de la fluorescence de ceux-ci, nous avons dû les retravailler, ce qui
+explique l'aspect granuleux des images.}.
+
+
+\unscaledFigure[!h]{images/maquettes/notifications.jpg}{Notification
+indiquant à l'utilisateur le meilleur restaurant pour aller manger}
+\unscaledFigure[p]{images/maquettes/accueil.jpg}{Écran d'accueil de
+l'application. C'est aussi sur cet écran qu'on tombe en ayant cliqué sur
+la notification.}
+\unscaledFigure[p]{images/maquettes/details.jpg}{Détails sur un
+restaurant. On y voit le graphe du temps d'attente ainsi que le menu. On
+a la possibilité de calculer un itinéraire.\label{fixe}}
+\unscaledFigure[p]{images/maquettes/boutMenu.jpg}{Bout de post-it nous
+ayant servi à tester un menu scrollable\label{bout}}
+\unscaledFigure[p]{images/maquettes/itineraire.jpg}{Calcul de
+l'itinéraire par l'application maps}
+\unscaledFigure[p]{images/maquettes/menu.jpg}{Menu permettant d'accéder
+à la liste des restaurants, à la carte ainsi qu'au paramétrage de
+l'application.}
+\unscaledFigure[p]{images/maquettes/carte.jpg}{Vue du plan avec
+géolocalisation des restaurants.}
+\unscaledFigure[p]{images/maquettes/cartedetail.jpg}{Affichage du détail
+d'un restaurant sur la carte.}
